# ur_obstacle_avoidance

./: .gitignore  .gitmodules  README.md  requirements.txt  setup.sh
cartesian_dmp/: CMakeLists.txt  package.xml  setup.py
cartesian_dmp/nodes/: cartesian_dmp_node.py
cartesian_dmp/scripts/: custom_dmp.py
cartesian_dmp/src/: cartesina_dmp.cpp
cartesian_dmp/src/cartesian_dmp/: cartesian_dmp.py  cartesian_dmp_2.py
cartesian_dmp/srv/: DMPRequest.srv
dmp/: CMakeLists.txt
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/config/: filter_realsense_d435.yaml
obstacle_avoidance/data/: 2_test_avoidance.txt  2_test_avoidance_obstacle.txt  2_test_avoidance_path.txt  input_cloud_1.pcd  input_cloud_2.pcd  real_test_path.txt
obstacle_avoidance/include/: obstacle_avoidance.h
obstacle_avoidance/launch/: collision.launch  load_cube.launch  obstacle_avoidance.launch  rb_record.launch  safety_check.launch
obstacle_avoidance/models/: arm.sdf  cube.sdf  mesh.stl  sample.sdf  sample_temp.sdf
obstacle_avoidance/models/arm/: model.config  model.sdf
obstacle_avoidance/models/cube/: model.config  model.sdf
obstacle_avoidance/models/sphere/: model.config  model.sdf
obstacle_avoidance/msg/: AvoidanceExecute.msg
obstacle_avoidance/src/: collision_check.cpp  collision_check.py  collision_volume_reconstruction.cpp  collsion_volume_reconstruction.cpp  load_cube.py  load_obstacle.py  move_test.cpp  move_test_py.py  safety_check.cpp  safety_check.py  safety_check_2.cpp  workspace_filter.cpp  workspace_filter.py  workspace_filter_2.cpp
obstacle_avoidance/src/old/: cluster_tunning.py  safety_check.py  safety_check_2_pcl.cpp  workspace_filter.py
obstacle_avoidance/src/tools/: cartesian_demo_generator.py  cartesian_dmp_call.py  cartesian_dmp_call_multi.py  load_virtual_obstacle.py  plot_clusters.py  plot_clusters_multi.py  plot_potential.py  plot_potential_multi.py  robot_move.py
realsense-ros-gazebo/: .gitignore
realsense-ros-gazebo/realsense-ros/realsense2_description/launch/: gazebo.launch  view_d435i_model.launch  view_d435i_model_rviz_gazebo.launch
realsense-ros-gazebo/realsense-ros/realsense2_description/urdf/: test_d435i_camera.urdf.xacro
roy_dmp/: .gitignore  CMakeLists.txt  my_robot_calibration.yaml
roy_dmp/data/rosbag_recordings/: real_test.bag  test.bag  test1.bag  test2.bag  test3.bag  test_avoidance.bag
roy_dmp/data/weights/: aa.bag.yaml  curve_line_with_circles.bag.yaml  real_test.bag.yaml  test.bag.yaml  test1.bag.yaml  test2.bag.yaml  test3.bag.yaml  test_avoidance.bag.yaml
roy_dmp/launch/: a.launch  old_ur3_with_dmp.launch  rs_d435_camera.launch  ur3_gazebo_with_dmp.launch  ur3_gazebo_with_dmp_cam.launch  ur3_with_dmp.launch  ur_with_dmp.launch  ur_with_dmp_broken.launch
roy_dmp/resources/: dmp_config.rviz  dmp_config_old.rviz  empty.world
roy_dmp/script/: gui_dmp.py  ui_dmp.py  ui_dmp.ui
roy_dmp/src/: dmp_execute.py  dmp_execute_old.py  dmp_learn.py  dmp_record.py  kinematics_interface.py
roy_dmp/urdf/: _d435.urdf.xacro  base.xacro  cube.xacro  d435_camera.urdf.xacro  rg2.urdf.xacro  test_d435_camera.urdf.xacro  test_d435i_camera.urdf.xacro  tool.xacro  ur.xacro  ur3.xacro
universal_robot/ur_gazebo/launch/: ur3_bringup.launch
universal_robot/ur_gazebo/launch/inc/: load_ur.launch.xml  load_ur3.launch.xml
universal_robot/ur_gazebo/urdf/: ur.xacro  ur_cam.xacro
