<?xml version="1.0"?>
<package>
  <name>cartesian_dmp</name>
  <version>0.0.0</version>
  <description>Cartesian DMP</description>
  
  <author>Izan Leal</author>
  <maintainer email="izan.upc@gmail.com">Izan Leal</maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>common_msgs</run_depend>
  <run_depend>ros</run_depend>
  <run_depend>ros_comm</run_depend>  <!-- rospy, roscpp -->

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>


</package>
